@@ -365,6 +365,7 @@ constant_pod(Policy Parameters, FOR_ALL_POLICY_KEY)
 
 #define FOR_ALL_STORAGE_KEY(APPLY)\
 APPLY(STORAGE_COMMENT)\
+APPLY(STORAGE_TAPEDEV)\
 APPLY(STORAGE_TPCHANGER)\
 APPLY(STORAGE_POLICY)\
 APPLY(STORAGE_LABELSTR)\
